// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FolderList does select selected folders 1`] = `
.c28 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c4 {
  position: relative;
}

.c9 {
  position: relative;
  z-index: 2;
}

.c11 {
  background: #eaf5ff;
  color: #66b7f1;
  padding-top: 8px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-left: 12px;
  border-radius: 4px;
}

.c13 {
  position: relative;
  z-index: 3;
  overflow: hidden;
  max-width: 100%;
}

.c14 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c17 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 16px;
}

.c3 {
  grid-column: span 3;
  max-width: 100%;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c26 svg {
  height: 12px;
  width: 12px;
}

.c26 svg > g,
.c26 svg path {
  fill: #ffffff;
}

.c26[aria-disabled='true'] {
  pointer-events: none;
}

.c26:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c26:focus-visible {
  outline: none;
}

.c26:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c27 svg > g,
.c27 svg path {
  fill: #8e8ea9;
}

.c27:hover svg > g,
.c27:hover svg path {
  fill: #666687;
}

.c27:active svg > g,
.c27:active svg path {
  fill: #a5a5ba;
}

.c27[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c27[aria-disabled='true'] svg path {
  fill: #666687;
}

.c1 {
  font-weight: 500;
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c18 {
  font-weight: 500;
  color: #32324d;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c21 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c20 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c10 {
  margin: 0;
  height: 18px;
  min-width: 18px;
  border-radius: 4px;
  border: 1px solid #c0c0cf;
  -webkit-appearance: none;
  background-color: #ffffff;
  cursor: pointer;
}

.c10:checked {
  background-color: #4945ff;
  border: 1px solid #4945ff;
}

.c10:checked:after {
  content: '';
  display: block;
  position: relative;
  background: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDEwIDgiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPHBhdGgKICAgIGQ9Ik04LjU1MzIzIDAuMzk2OTczQzguNjMxMzUgMC4zMTYzNTUgOC43NjA1MSAwLjMxNTgxMSA4LjgzOTMxIDAuMzk1NzY4TDkuODYyNTYgMS40MzQwN0M5LjkzODkzIDEuNTExNTcgOS45MzkzNSAxLjYzNTkgOS44NjM0OSAxLjcxMzlMNC4wNjQwMSA3LjY3NzI0QzMuOTg1OSA3Ljc1NzU1IDMuODU3MDcgNy43NTgwNSAzLjc3ODM0IDcuNjc4MzRMMC4xMzg2NiAzLjk5MzMzQzAuMDYxNzc5OCAzLjkxNTQ5IDAuMDYxNzEwMiAzLjc5MDMyIDAuMTM4NTA0IDMuNzEyNEwxLjE2MjEzIDIuNjczNzJDMS4yNDAzOCAyLjU5NDMyIDEuMzY4NDMgMi41OTQyMiAxLjQ0NjggMi42NzM0OEwzLjkyMTc0IDUuMTc2NDdMOC41NTMyMyAwLjM5Njk3M1oiCiAgICBmaWxsPSJ3aGl0ZSIKICAvPgo8L3N2Zz4=) no-repeat no-repeat center center;
  width: 10px;
  height: 10px;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

.c10:checked:disabled:after {
  background: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDEwIDgiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPHBhdGgKICAgIGQ9Ik04LjU1MzIzIDAuMzk2OTczQzguNjMxMzUgMC4zMTYzNTUgOC43NjA1MSAwLjMxNTgxMSA4LjgzOTMxIDAuMzk1NzY4TDkuODYyNTYgMS40MzQwN0M5LjkzODkzIDEuNTExNTcgOS45MzkzNSAxLjYzNTkgOS44NjM0OSAxLjcxMzlMNC4wNjQwMSA3LjY3NzI0QzMuOTg1OSA3Ljc1NzU1IDMuODU3MDcgNy43NTgwNSAzLjc3ODM0IDcuNjc4MzRMMC4xMzg2NiAzLjk5MzMzQzAuMDYxNzc5OCAzLjkxNTQ5IDAuMDYxNzEwMiAzLjc5MDMyIDAuMTM4NTA0IDMuNzEyNEwxLjE2MjEzIDIuNjczNzJDMS4yNDAzOCAyLjU5NDMyIDEuMzY4NDMgMi41OTQyMiAxLjQ0NjggMi42NzM0OEwzLjkyMTc0IDUuMTc2NDdMOC41NTMyMyAwLjM5Njk3M1oiCiAgICBmaWxsPSIjOEU4RUE5IgogIC8+Cjwvc3ZnPg==) no-repeat no-repeat center center;
}

.c10:disabled {
  background-color: #dcdce4;
  border: 1px solid #c0c0cf;
}

.c10:indeterminate {
  background-color: #4945ff;
  border: 1px solid #4945ff;
}

.c10:indeterminate:after {
  content: '';
  display: block;
  position: relative;
  color: white;
  height: 2px;
  width: 10px;
  background-color: #ffffff;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

.c10:indeterminate:disabled {
  background-color: #dcdce4;
  border: 1px solid #c0c0cf;
}

.c10:indeterminate:disabled:after {
  background-color: #8e8ea9;
}

.c6 {
  background: #ffffff;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
  cursor: pointer;
  cursor: pointer;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 > * {
  margin-left: 0;
  margin-right: 0;
}

.c8 > * + * {
  margin-left: 12px;
}

.c22 {
  right: 16px;
}

.c23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c24 > * {
  margin-left: 0;
  margin-right: 0;
}

.c24 > * + * {
  margin-left: 8px;
}

.c25 {
  position: absolute;
  top: 12px;
}

.c5 {
  height: 100%;
  left: 0;
  position: absolute;
  opacity: 0;
  top: 0;
  width: 100%;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12 path {
  fill: currentColor;
}

.c15 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c16 {
  max-width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c19 {
  max-width: 100%;
}

@media (max-width:68.75rem) {
  .c3 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c3 {
    grid-column: span;
  }
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
    >
      <h2
        class="c1"
      >
        List title with selected items
      </h2>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class=""
        >
          <div
            class="c4"
          >
            <button
              aria-hidden="true"
              aria-label="Folder 1"
              class="c5"
              tabindex="-1"
              type="button"
            />
            <div
              class="c6 c7 c8"
              cursor="pointer"
              spacing="3"
            >
              <div
                class="c9"
              >
                <input
                  aria-labelledby="folder-1-3-title"
                  checked=""
                  class="c10"
                  type="checkbox"
                />
              </div>
              <div
                class="c11"
              >
                <svg
                  class="c12"
                  fill="none"
                  height="1.125rem"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.414 5H21a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V4a1 1 0 011-1h7.414l2 2z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <div
                class="c13 c14 c15"
                id="folder-1-3-title"
                overflow="hidden"
              >
                <a
                  aria-current="page"
                  class="c16 active"
                  href="/?folder=1"
                >
                  <h2
                    class="c17"
                  >
                    <span
                      class="c18 c19"
                    >
                      Folder 1
                      <div
                        class="c20"
                      >
                        :
                      </div>
                    </span>
                    <span
                      class="c21"
                    >
                      1
                       folder, 
                      1
                       assets
                    </span>
                  </h2>
                </a>
              </div>
              <div
                class="c22 c23 c24 c25"
                spacing="2"
              >
                <button
                  aria-disabled="false"
                  class="c26 c27"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 011.887 0l3.118 3.118zM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class=""
        >
          <div
            class="c4"
          >
            <button
              aria-hidden="true"
              aria-label="Folder 2"
              class="c5"
              tabindex="-1"
              type="button"
            />
            <div
              class="c6 c7 c8"
              cursor="pointer"
              spacing="3"
            >
              <div
                class="c9"
              >
                <input
                  aria-labelledby="folder-2-4-title"
                  checked=""
                  class="c10"
                  type="checkbox"
                />
              </div>
              <div
                class="c11"
              >
                <svg
                  class="c12"
                  fill="none"
                  height="1.125rem"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.414 5H21a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V4a1 1 0 011-1h7.414l2 2z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <div
                class="c13 c14 c15"
                id="folder-2-4-title"
                overflow="hidden"
              >
                <a
                  aria-current="page"
                  class="c16 active"
                  href="/?folder=2"
                >
                  <h2
                    class="c17"
                  >
                    <span
                      class="c18 c19"
                    >
                      Folder 2
                      <div
                        class="c20"
                      >
                        :
                      </div>
                    </span>
                    <span
                      class="c21"
                    >
                      11
                       folder, 
                      12
                       assets
                    </span>
                  </h2>
                </a>
              </div>
              <div
                class="c22 c23 c24 c25"
                spacing="2"
              >
                <button
                  aria-disabled="false"
                  class="c26 c27"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 011.887 0l3.118 3.118zM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c28"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`FolderList renders 1`] = `
.c28 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c4 {
  position: relative;
}

.c9 {
  position: relative;
  z-index: 2;
}

.c11 {
  background: #eaf5ff;
  color: #66b7f1;
  padding-top: 8px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-left: 12px;
  border-radius: 4px;
}

.c13 {
  position: relative;
  z-index: 3;
  overflow: hidden;
  max-width: 100%;
}

.c14 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c17 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 16px;
}

.c3 {
  grid-column: span 3;
  max-width: 100%;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c26 svg {
  height: 12px;
  width: 12px;
}

.c26 svg > g,
.c26 svg path {
  fill: #ffffff;
}

.c26[aria-disabled='true'] {
  pointer-events: none;
}

.c26:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c26:focus-visible {
  outline: none;
}

.c26:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c27 svg > g,
.c27 svg path {
  fill: #8e8ea9;
}

.c27:hover svg > g,
.c27:hover svg path {
  fill: #666687;
}

.c27:active svg > g,
.c27:active svg path {
  fill: #a5a5ba;
}

.c27[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c27[aria-disabled='true'] svg path {
  fill: #666687;
}

.c1 {
  font-weight: 500;
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c18 {
  font-weight: 500;
  color: #32324d;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c21 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c20 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c10 {
  margin: 0;
  height: 18px;
  min-width: 18px;
  border-radius: 4px;
  border: 1px solid #c0c0cf;
  -webkit-appearance: none;
  background-color: #ffffff;
  cursor: pointer;
}

.c10:checked {
  background-color: #4945ff;
  border: 1px solid #4945ff;
}

.c10:checked:after {
  content: '';
  display: block;
  position: relative;
  background: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDEwIDgiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPHBhdGgKICAgIGQ9Ik04LjU1MzIzIDAuMzk2OTczQzguNjMxMzUgMC4zMTYzNTUgOC43NjA1MSAwLjMxNTgxMSA4LjgzOTMxIDAuMzk1NzY4TDkuODYyNTYgMS40MzQwN0M5LjkzODkzIDEuNTExNTcgOS45MzkzNSAxLjYzNTkgOS44NjM0OSAxLjcxMzlMNC4wNjQwMSA3LjY3NzI0QzMuOTg1OSA3Ljc1NzU1IDMuODU3MDcgNy43NTgwNSAzLjc3ODM0IDcuNjc4MzRMMC4xMzg2NiAzLjk5MzMzQzAuMDYxNzc5OCAzLjkxNTQ5IDAuMDYxNzEwMiAzLjc5MDMyIDAuMTM4NTA0IDMuNzEyNEwxLjE2MjEzIDIuNjczNzJDMS4yNDAzOCAyLjU5NDMyIDEuMzY4NDMgMi41OTQyMiAxLjQ0NjggMi42NzM0OEwzLjkyMTc0IDUuMTc2NDdMOC41NTMyMyAwLjM5Njk3M1oiCiAgICBmaWxsPSJ3aGl0ZSIKICAvPgo8L3N2Zz4=) no-repeat no-repeat center center;
  width: 10px;
  height: 10px;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

.c10:checked:disabled:after {
  background: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDEwIDgiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPHBhdGgKICAgIGQ9Ik04LjU1MzIzIDAuMzk2OTczQzguNjMxMzUgMC4zMTYzNTUgOC43NjA1MSAwLjMxNTgxMSA4LjgzOTMxIDAuMzk1NzY4TDkuODYyNTYgMS40MzQwN0M5LjkzODkzIDEuNTExNTcgOS45MzkzNSAxLjYzNTkgOS44NjM0OSAxLjcxMzlMNC4wNjQwMSA3LjY3NzI0QzMuOTg1OSA3Ljc1NzU1IDMuODU3MDcgNy43NTgwNSAzLjc3ODM0IDcuNjc4MzRMMC4xMzg2NiAzLjk5MzMzQzAuMDYxNzc5OCAzLjkxNTQ5IDAuMDYxNzEwMiAzLjc5MDMyIDAuMTM4NTA0IDMuNzEyNEwxLjE2MjEzIDIuNjczNzJDMS4yNDAzOCAyLjU5NDMyIDEuMzY4NDMgMi41OTQyMiAxLjQ0NjggMi42NzM0OEwzLjkyMTc0IDUuMTc2NDdMOC41NTMyMyAwLjM5Njk3M1oiCiAgICBmaWxsPSIjOEU4RUE5IgogIC8+Cjwvc3ZnPg==) no-repeat no-repeat center center;
}

.c10:disabled {
  background-color: #dcdce4;
  border: 1px solid #c0c0cf;
}

.c10:indeterminate {
  background-color: #4945ff;
  border: 1px solid #4945ff;
}

.c10:indeterminate:after {
  content: '';
  display: block;
  position: relative;
  color: white;
  height: 2px;
  width: 10px;
  background-color: #ffffff;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

.c10:indeterminate:disabled {
  background-color: #dcdce4;
  border: 1px solid #c0c0cf;
}

.c10:indeterminate:disabled:after {
  background-color: #8e8ea9;
}

.c6 {
  background: #ffffff;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
  cursor: pointer;
  cursor: pointer;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 > * {
  margin-left: 0;
  margin-right: 0;
}

.c8 > * + * {
  margin-left: 12px;
}

.c22 {
  right: 16px;
}

.c23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c24 > * {
  margin-left: 0;
  margin-right: 0;
}

.c24 > * + * {
  margin-left: 8px;
}

.c25 {
  position: absolute;
  top: 12px;
}

.c5 {
  height: 100%;
  left: 0;
  position: absolute;
  opacity: 0;
  top: 0;
  width: 100%;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12 path {
  fill: currentColor;
}

.c15 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c16 {
  max-width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c19 {
  max-width: 100%;
}

@media (max-width:68.75rem) {
  .c3 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c3 {
    grid-column: span;
  }
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
    >
      <h2
        class="c1"
      >
        List title
      </h2>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class=""
        >
          <div
            class="c4"
          >
            <button
              aria-hidden="true"
              aria-label="Folder 1"
              class="c5"
              tabindex="-1"
              type="button"
            />
            <div
              class="c6 c7 c8"
              cursor="pointer"
              spacing="3"
            >
              <div
                class="c9"
              >
                <input
                  aria-labelledby="folder-1-1-title"
                  class="c10"
                  type="checkbox"
                />
              </div>
              <div
                class="c11"
              >
                <svg
                  class="c12"
                  fill="none"
                  height="1.125rem"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.414 5H21a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V4a1 1 0 011-1h7.414l2 2z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <div
                class="c13 c14 c15"
                id="folder-1-1-title"
                overflow="hidden"
              >
                <a
                  aria-current="page"
                  class="c16 active"
                  href="/?folder=1"
                >
                  <h2
                    class="c17"
                  >
                    <span
                      class="c18 c19"
                    >
                      Folder 1
                      <div
                        class="c20"
                      >
                        :
                      </div>
                    </span>
                    <span
                      class="c21"
                    >
                      1
                       folder, 
                      1
                       assets
                    </span>
                  </h2>
                </a>
              </div>
              <div
                class="c22 c23 c24 c25"
                spacing="2"
              >
                <button
                  aria-disabled="false"
                  class="c26 c27"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 011.887 0l3.118 3.118zM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class=""
        >
          <div
            class="c4"
          >
            <button
              aria-hidden="true"
              aria-label="Folder 2"
              class="c5"
              tabindex="-1"
              type="button"
            />
            <div
              class="c6 c7 c8"
              cursor="pointer"
              spacing="3"
            >
              <div
                class="c9"
              >
                <input
                  aria-labelledby="folder-2-2-title"
                  class="c10"
                  type="checkbox"
                />
              </div>
              <div
                class="c11"
              >
                <svg
                  class="c12"
                  fill="none"
                  height="1.125rem"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.414 5H21a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V4a1 1 0 011-1h7.414l2 2z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <div
                class="c13 c14 c15"
                id="folder-2-2-title"
                overflow="hidden"
              >
                <a
                  aria-current="page"
                  class="c16 active"
                  href="/?folder=2"
                >
                  <h2
                    class="c17"
                  >
                    <span
                      class="c18 c19"
                    >
                      Folder 2
                      <div
                        class="c20"
                      >
                        :
                      </div>
                    </span>
                    <span
                      class="c21"
                    >
                      11
                       folder, 
                      12
                       assets
                    </span>
                  </h2>
                </a>
              </div>
              <div
                class="c22 c23 c24 c25"
                spacing="2"
              >
                <button
                  aria-disabled="false"
                  class="c26 c27"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 011.887 0l3.118 3.118zM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c28"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
